force-app/main/default/objects/Opportunity_Promotion__c/Opportunity_Promotion__c.object-meta.xml
<CustomObject>
    <label>Opportunity Promotion</label>
    <nameField>
        <label>Opportunity Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Promotions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>