force-app/main/default/objects/Opportunity_Promotion__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>BLANKVALUE(Promotion__r.Commission_Percentage__c,  0 )</formula>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>