force-app/main/default/objects/Opportunity_Promotion__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description>For Paradigm</description>
    <formula>Promotion__r.Promo_Code__c</formula>
    <inlineHelpText>For Paradigm</inlineHelpText>
    <label>Promo Code</label>
    <type>Text</type>
</CustomField>