force-app/main/default/objects/Opportunity_Promotion__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <referenceTo>Promotions__c</referenceTo>
    <relationshipLabel>Opportunity Promotions</relationshipLabel>
    <relationshipName>Opportunity_Promotions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>